--- a/vnet-orchestration/action.yml
+++ b/vnet-orchestration/action.yml
@@ -1,5 +1,5 @@
-name: Azure Vnet Ochestration
-description: Orchestrates and deploys the azure vnet
+name: Azure Storage Account Ochestration
+description: Orchestrates the azure storage account
 
 inputs:
   GITHUB_ENVIRONMENT:
@@ -11,49 +11,39 @@ inputs:
   AZURE_LOCATION:
     required: true
     type: string
-  VNET_NAME:
+  AZURE_STORAGE_NAME:
+    required: true
     type: string
-    default: ''
 
 
 
 runs:
   using: 'composite'
-  steps:
-    - name: Default vnet name
-      shell: bash
-      id: vnetname
-      # Sets substitutes and assigns name var to resource group if vnet name is blank
-      run: |
-        name=$(echo "${{ inputs.VNET_NAME }}")
-        name=$(echo ${name:=${{ inputs.AZURE_RESOURCE_GROUP }}-vnet}) 
-        echo "vnetname=$name" >> $GITHUB_OUTPUT
-        
-    - name: VNet heartbeat
+  steps:        
+    - name: Storage Account heartbeat
       shell: bash
       id: heartbeat
       run: |
-        echo '### V-Net Heartbeat' >> $GITHUB_STEP_SUMMARY
-        # Check if a vnet exists already with the name
-        query=$(az network vnet list --resource-group ${{ inputs.AZURE_RESOURCE_GROUP }} --query "[?name == '${{ steps.vnetname.outputs.vnetname }}']")
-        len=$(echo "$query" | jq 'length')
-        if [ "$len" -eq 0 ]; then
-          echo "vnet=missing" >> $GITHUB_OUTPUT
-          echo 'No vnet found' >> $GITHUB_STEP_SUMMARY
+          echo '### Storage Account Heartbeat' >> $GITHUB_STEP_SUMMARY
+          ## Storage Account ##
+          query=$(az storage account list --resource-group ${{ inputs.AZURE_RESOURCE_GROUP }} --query "[?name=='${{ inputs.AZURE_STORAGE_NAME }}']")
+          result=$(echo "$query" | jq 'length')
+          if [ "$result" -eq 0 ]; then
+            echo "storage=missing" >> $GITHUB_OUTPUT
+            echo "No storage account found" >> $GITHUB_STEP_SUMMARY
         else
           found=$(echo "$query" | jq '.[].name')
-          echo -e "Found vnet - $found" >> $GITHUB_STEP_SUMMARY
+          echo -e "Found storage account - $found" >> $GITHUB_STEP_SUMMARY
         fi
 
-    - name: 'Create a virtual network'
+    - name: Create Storage Account
       shell: bash
-      if: steps.heartbeat.outputs.vnet == 'missing'
+      if: steps.heartbeat.outputs.storage == 'missing'
       run: |
-        # Create the VNET
-        # az network vnet create \
-        #   --name '${{ steps.vnetname.outputs.vnetname }}' \
-        #   --resource-group '${{ inputs.AZURE_RESOURCE_GROUP }}' \
-        #   --location '${{ inputs.AZURE_LOCATION }}'
-        
-        echo 'Virtual Network ${{ steps.vnetname.outputs.vnetname }} | Created' >> $GITHUB_STEP_SUMMARY 
+          # az storage account create \
+          #   --resource-group '${{ inputs.AZURE_RESOURCE_GROUP }}' \
+          #   --name '${{ inputs.AZURE_STORAGE_NAME }}' \
+          #   --location '${{ inputs.AZURE_LOCATION }}'
+
+          # echo 'Storage Account | Created' >> $GITHUB_STEP_SUMMARY
             
