use modular compile release & attach

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,15 +13,31 @@ jobs:
       contents: write # for creating a release
     steps:
       - uses: actions/checkout@v4
-      - uses: DoubtfulJerboa/jsaction/actions/python-embed-setup@v12
+      - uses: DoubtfulJerboa/jsaction/actions/python-embed-setup@v15
         with:
           PYTHON_VERSION: 3.12.4
           REQUIREMENTS_PATH: ./requirements.txt
-      - uses: DoubtfulJerboa/jsaction/actions/fetch-nssm@v12
+
+      - uses: DoubtfulJerboa/jsaction/actions/fetch-nssm@v15
       - run: ls
 
-      - uses: DoubtfulJerboa/jsaction/actions/compile-inno-setup@v14
+      - id: compileISS
+        uses: DoubtfulJerboa/jsaction/actions/compile-inno-setup@v15
         with:
           ISS_PATH: ./setup.iss
+
+      - id: createRelease
+        uses: DoubtfulJerboa/jsaction/actions/create-release@v15
+        with:
+          RELEASE_TAG: ${{steps.compileISS.outputs.releaseTag}}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - id: attachExe
+        uses: DoubtfulJerboa/jsaction/actions/attach-to-release@v15
+        with:
+          RELEASE_ID: ${{steps.createRelease.outputs.releaseID}}
+          FILE_PATH: ./Release
+          FILE_NAME: ${{steps.compileISS.outputs.releaseFile}}
         env:
           GITHUB_TOKEN: ${{ github.token }}
