--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   test:
     uses: DoubtfulJerboa/jsaction/.github/workflows/compile-py-service-installer.yml@callableworkflow
+    permissions:
+      contents: write # required for creating a release
     with:
       PYTHON_VERSION: 3.11.4
       REQUIREMENTS_PATH: ./requirements.txt
